--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "thera-coding-session",
   "version": "1.0.0",
   "description": "TheraPanacea test starter",
+  "homepage": "https://fotiou.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "latest",
@@ -27,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
@@ -37,5 +40,8 @@
   ],
   "msw": {
     "workerDirectory": "public"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
